...
                    TextField("Жиры (г)", text: $fat)
                        .keyboardType(.decimalPad)
                    TextField("Углеводы (г)", text: $carbs)
                        .keyboardType(.decimalPad)
                }
            }
            .navigationTitle("Добавить прием пищи")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
                    Button("Отмена") {
                        dismiss()
                    }
...
